# create-hima-app

./: .env.example  .gitignore  docker-compose.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: .gitignore  main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: email.py  user.py
backend/app/crud/: base.py
backend/app/enum/: role.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  email.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/fixtures/: user.py
backend/app/utils/: auth.py  env.py  exceptions.py
backend/backend/app/: main.py
backend/migrations/versions/: cff27a089222_init.py
celery-backend/: README.md  email_handler.py  pyproject.toml  worker.py
celery-backend/email-templates/: new_password.html  reset_password.html  verify_email.html
celery-backend/email-templates/static/: styles.css
celery-backend/tasks/: new_password_email.py  reset_password_email.py  verify_account_email.py
email-backend/: Dockerfile  README.md  pyproject.toml
email-backend/app/: main.py
email-backend/app/api/: api.py
email-backend/app/api/endpoints/: email.py
email-backend/app/schemas/: email.py
frontend/: .env.production  biome.json  bun.lockb  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: manifest.json
frontend/src/api/: apiClient.ts  index.ts
frontend/src/api/auth/: getUser.ts  index.ts  login.ts  register.ts
frontend/src/api/blog/: addNewBlogPost.ts  deleteBlogPost.ts  getAllBlogPosts.ts  getBlogPost.ts  index.ts  types.ts  updateBlogPost.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: index.ts
frontend/src/components/Button/: Button.tsx
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/Modal/: LogInModal.tsx  Modal.tsx  RegisterModal.tsx  index.ts
frontend/src/components/PasswordValidation/: PasswordValidation.tsx
frontend/src/components/Search/: Search.tsx
frontend/src/components/TextField/: PasswordField.tsx  TextField.tsx  index.ts
frontend/src/fonts/: stylesheet.css
frontend/src/providers/: Providers.tsx  index.ts
(+12 files in other folders)
